--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ name: Andrew Daniel
 # Short bio or description (displayed in the header)
 description: Full Stack Developer
 
+site_description: Andrew Daniel's development and personal blog
+
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/867941?s=96&v=4
 
@@ -22,7 +24,6 @@ footer-links:
   instagram: ajdaniel
   linkedin: ajdaniel
   twitter: ajdaniel
-
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -58,7 +59,7 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+    css_class: "highlight"
 
 # Set the Sass partials directory, as we're using @imports
 sass:
